<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:layout_gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnfm"
        android:gravity="center_horizontal"
        android:text="@string/conversion_calculator"
        android:textStyle="bold"
        android:textSize="30sp" />
    <Button
        android:id="@+id/btnfm"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/feet_to_meter"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnmf"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toTopOf="@+id/btnmc"
        android:onClick="feetToMeter"
        />
    <Button
        android:id="@+id/btnmf"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/meter_to_feet"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnfm"
        android:onClick="MetertoFeet"
        />
    <Button
        android:id="@+id/btnmc"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/meter_to_cm"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/btnfm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btncm"
        android:onClick="MetertoCM"
        />
    <Button
        android:id="@+id/btncm"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/cm_to_meter"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toRightOf="@+id/btnmc"
        app:layout_constraintTop_toBottomOf="@+id/btnmf"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="CMtoMeter"
        />
    <Button
        android:id="@+id/btnkm"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/km_to_meter"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnmk"
        app:layout_constraintTop_toBottomOf="@+id/btnmc"
        android:onClick="KMtoMeter"
        />
    <Button
        android:id="@+id/btnmk"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/meter_to_km"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnkm"
        app:layout_constraintTop_toBottomOf="@+id/btncm"
        android:onClick="MetertoKM"
        />

</androidx.constraintlayout.widget.ConstraintLayout>